<resources>
    <string name="s_appName">Homework_15</string>

    <string name="s_greeting_SF">Hello</string>
    <string name="s_loginHint_SF">Login</string>
    <string name="s_passwordHint_SF">Password</string>
    <string name="s_registration_SF">Register</string>
    <string name="s_signIn_SF">login</string>

    <string name="s_loginHint_RF">Login</string>
    <string name="s_passwordHint_RF">Password</string>
    <string name="s_firstNameHint_RF">First name</string>
    <string name="s_lastNameHint_RF">Last name</string>
    <string name="s_female_RF">Female</string>
    <string name="s_male_RF">Male</string>
    <string name="s_register_RF">Register</string>

    <string name="s_personGender_male">MALE</string>
    <string name="s_personGender_female">FEMALE</string>

    <string name="s_greeting">Hello</string>
    <string name="s_greetingMr">"Hello Mr. "</string>
    <string name="s_greetingMrs">"Hello Mrs. "</string>

    <string name="s_dt_failure">Login failure</string>
    <string name="s_dt_success">Login success</string>

    <string name="s_dp_ok">OK</string>

    <string name="s_dm_welcomeMr">"Welcome Mr. "</string>
    <string name="s_dm_welcomeMrs">"Welcome Mrs. "</string>

    <string name="s_dm_userNotExist">User doesn\'t exist or password is wrong</string>
    <string name="s_dm_user">"User "</string>
    <string name="s_dm_notExist">" doesn\'t exist or password is wrong"</string>

    <string name="s_dm_user_n">"User \n"</string>
    <string name="s_dm_n_registered">"\n registered"</string>

    <string name="s_dm_emptyFields">Please fill all fields and choose gender</string>

    <string name="s_settings">Settings</string>
    <string name="s_showUsers">Show users</string>
    <string name="s_about">About</string>

    <string name="s_loadFromAsset">load from asset</string>
    <string name="s_loadFromRaw">load from raw</string>

    <string name="s_edit">Edit</string>
    <string name="s_delete">Delete</string>
    <string name="s_editOrDelete">Edit / Delete</string>

    <string name="s_login_PC">person login:</string>
    <string name="s_password_PC">person password:</string>
    <string name="s_firstName_PC">person first name:</string>
    <string name="s_lastName_PC">person last name:</string>
    <string name="s_gender_PC">person gender:</string>
    <string name="s_databaseId_PC">database id:</string>

    <string name="s_warning_PC">ATTENTION:\nAll fields must be filled.\nGender only [MALE] or [FEMALE].\nOtherwise edit will be canceled.</string>

    <string name="s_sortBy">Sort database by:</string>

    <string name="s_login_SF">login</string>
    <string name="s_password_SF">password</string>
    <string name="s_firstName_SF">first name</string>
    <string name="s_lastName_SF">last name</string>
    <string name="s_gender_SF">gender</string>

    <string name="s_edit_failure">EDIT FAILURE</string>
</resources>
